Add basic routing

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -3,4 +3,6 @@
   <app-navigation></app-navigation>
 </div>
 
-<router-outlet></router-outlet>
+<div class = "content">
+  <router-outlet></router-outlet>
+</div>
