--- a/front-end/src/app/navigation/navigation.component.html
+++ b/front-end/src/app/navigation/navigation.component.html
@@ -1,14 +1,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-	<a class="navbar-brand text-light font-weight-bold">Flower Shop</a>
+	<a class="navbar-brand text-light font-weight-bold" routerLink = "">Flower Shop</a>
   	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     	<div class="navbar-nav">
-			<a class="nav-item nav-link active" href="/">Home <span class="sr-only"></span></a>
+			<a class="nav-item nav-link active" routerLink="/">Home <span class="sr-only"></span></a>
 		</div>
 		<div class="navbar-nav account-options">
-      		<a class="nav-item nav-link" href="/login">Login</a>
-      		<a class="nav-item nav-link" href="/profile">Profile</a>
-      		<a class="nav-item nav-link" href="/logout">Logout</a>
+      		<a class="nav-item nav-link" routerLink="/login">Login</a>
+      		<a class="nav-item nav-link" routerLink="/profile">Profile</a>
+      		<a class="nav-item nav-link" routerLink="/logout">Logout</a>
 		</div>
   	</div>
 </nav>
