--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class = "navigation">
+<div class = "container navigation">
   <app-navigation></app-navigation>
 </div>
 
-<div class = "content">
+<div class = "container border border-success content">
   <router-outlet></router-outlet>
 </div>
