--- a/front-end/src/app/app.component.sass
+++ b/front-end/src/app/app.component.sass
@@ -1,5 +1,10 @@
 
 .navigation
-	width: 75%
+	width: 85%
 	margin-left: auto
 	margin-right: auto
+	margin-bottom: 50px
+
+.content
+	position: relative
+	width: 90%
