--- a/front-end/src/app/navigation/navigation.component.html
+++ b/front-end/src/app/navigation/navigation.component.html
@@ -1,14 +1,28 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-	<a class="navbar-brand text-light font-weight-bold" routerLink = "">Flower Shop</a>
-  	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    	<div class="navbar-nav">
-			<a class="nav-item nav-link active" routerLink="/">Home <span class="sr-only"></span></a>
-		</div>
-		<div class="navbar-nav account-options">
-      		<a class="nav-item nav-link" routerLink="/login">Login</a>
-      		<a class="nav-item nav-link" routerLink="/profile">Profile</a>
-      		<a class="nav-item nav-link" routerLink="/logout">Logout</a>
-		</div>
-  	</div>
+  <a class="navbar-brand text-light font-weight-bold" routerLink = "">Flower Shop</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+	  <div>
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-item nav-link" routerLink="">Home</a>
+			</li>
+		</ul>
+	  </div>
+	<div class = account-options>
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-item nav-link" routerLink="/login">Login</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-item nav-link" routerLink="/profile">Profile</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-item nav-link" routerLink="/logout">Logout</a>
+			</li>
+		</ul>
+	</div>
+  </div>
 </nav>
