--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -3,6 +3,8 @@
   <app-navigation></app-navigation>
 </div>
 
-<div class = "container border border-success content">
+
+<div class = "container border border-success rounded content">
   <router-outlet></router-outlet>
+    <router-outlet name = "accountRouter"></router-outlet>
 </div>
