--- a/front-end/src/app/navigation/navigation.component.html
+++ b/front-end/src/app/navigation/navigation.component.html
@@ -11,10 +11,10 @@
 			</li>
 		</ul>
 	  </div>
-	<div class = account-options>
+	<div class = "account-options">
 		<ul class="navbar-nav">
 			<li class="nav-item">
-				<a class="nav-item nav-link" routerLink="/login">Login</a>
+				<a class="nav-item nav-link" routerLink="/account/login">Login</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-item nav-link" routerLink="/profile">Profile</a>
