--- a/front-end/src/app/account/login/login.component.html
+++ b/front-end/src/app/account/login/login.component.html
@@ -1,1 +1,11 @@
-<h1 class= "page-title"> Login </h1>
+<form class="accountForm">
+  <div class="form-group">
+    <label for="exampleInputLogin1">Login</label>
+    <input type="text" class="form-control" id="exampleInputLogin1" aria-describedby="loginHelp">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <button type="submit" class="btn btn-primary submit-button">Submit</button>
+</form>
