--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -4,7 +4,7 @@
 </div>
 
 
-<div class = "container border border-success rounded content">
+<!--<div class = "container border border-success rounded content"> -->
+<div class = "container content">
   <router-outlet></router-outlet>
-    <router-outlet name = "accountRouter"></router-outlet>
 </div>
