--- a/front-end/src/app/account/register/register.component.html
+++ b/front-end/src/app/account/register/register.component.html
@@ -1,15 +1,15 @@
-<form class="accountForm">
+<form class="accountForm" name="form" #f="ngForm" (submit)="createAccount()" novalidate>
   <div class="form-group">
     <label for="RegisterLogin">Login</label>
-    <input type="text" class="form-control" id="RegisterLogin" aria-describedby="RegisterLoginHelp">
+    <input type="text" class="form-control" id="RegisterLogin" aria-describedby="RegisterLoginHelp" name="name" [(ngModel)]="model.name">
   </div>
   <div class="form-group">
     <label for="RegisterEmail">Email address</label>
-    <input type="email" class="form-control" id="RegisterEmail" aria-describedby="RegisterEmailHelp">
+    <input type="email" class="form-control" id="RegisterEmail" aria-describedby="RegisterEmailHelp" name="email" [(ngModel)]="model.email">
   </div>
   <div class="form-group">
     <label for="RegisterPassword">Password</label>
-	<input type="password" class="form-control" id="RegisterPassword">
+	<input type="password" class="form-control" id="RegisterPassword" name="password" [(ngModel)]="model.password">
 	<small id="emailHelp" class="form-text text-muted">Password must contain at least 8 characters</small>
   </div>
   <div class="form-check">
