--- a/front-end/src/app/account/register/register.component.html
+++ b/front-end/src/app/account/register/register.component.html
@@ -1,19 +1,63 @@
-<form class="accountForm" name="form" #f="ngForm" (submit)="createAccount()" novalidate>
+<form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && createAccount()">
+
   <div class="form-group">
     <label for="RegisterLogin">Login</label>
-    <input type="text" class="form-control" id="RegisterLogin" aria-describedby="RegisterLoginHelp" name="name" [(ngModel)]="model.name">
+    <input type="text"
+          class="form-control"
+          id="RegisterLogin"
+          aria-describedby="RegisterLoginHelp"
+          name="name" 
+          [(ngModel)]="model.name"
+          #name="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && name.invalid }"
+          required />
+    <div class="text-danger" *ngIf="f.submitted && name.invalid">
+      <div *ngIf="name.errors.required" >Login can not be empty </div>
+      <div *ngIf="name.errors.invalid" >Login is not valid </div>
+    </div>
   </div>
+
   <div class="form-group">
     <label for="RegisterEmail">Email address</label>
-    <input type="email" class="form-control" id="RegisterEmail" aria-describedby="RegisterEmailHelp" name="email" [(ngModel)]="model.email">
+    <input type="email"
+          class="form-control"
+          id="RegisterEmail"
+          aria-describedby="RegisterEmailHelp"
+          name="email"
+          [(ngModel)]="model.email"
+          #email="ngModel"
+          [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
+          required email />
+    <div>
+      <div class="text-danger" *ngIf="f.submitted && email.invalid">
+        <div *ngIf="email.errors.required"> Email can not be empty !</div>
+        <div *ngIf="email.errors.email"> Email is not valid !</div>
+    </div>
+  </div>
+
   </div>
   <div class="form-group">
     <label for="RegisterPassword">Password</label>
-	<input type="password" class="form-control" id="RegisterPassword" name="password" [(ngModel)]="model.password">
-	<small id="emailHelp" class="form-text text-muted">Password must contain at least 8 characters</small>
+  <input type="password"
+         class="form-control"
+         id="RegisterPassword"
+         name="password"
+         [(ngModel)]="model.password"
+         #password="ngModel"
+         [ngClass]="{ 'is-invalid': f.submitted && password.invalid}"
+         required minlength="8"/>
+    <div class="text-danger" *ngIf="f.submitted && password.invalid">
+      <div *ngIf="password.errors.required" >Password can not be empty </div>
+      <div *ngIf="password.errors.minlength">Minimum length requried is 8 </div>
+      <div *ngIf="password.errors.invalid" >Password is not valid </div>
+    </div>
   </div>
+
   <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <input type="checkbox"
+           class="form-check-input"
+           id="exampleCheck1"
+    >
     <label class="form-check-label" for="RegulationsCheck">I accept the shop regulations </label>
   </div>
   <button type="submit" class="btn btn-primary submit-button">Submit</button>
