--- a/front-end/src/app/modules/account/account.component.html
+++ b/front-end/src/app/modules/account/account.component.html
@@ -1,10 +1,10 @@
 
 <div class = "d-flex justify-content-center">
 	<div class="btn-group btn-group-toggle buttons " data-toggle="buttons">
-  		<label class="btn btn-success active account-button " [routerLink] = "['login']">
+  		<label class="btn btn-success account-button " [routerLink] = "['login']" routerLinkActive="active">
     		<input type="radio" name="options" id="option1" autocomplete="off"  checked> Login
 		  </label>
-		<label class="btn  btn-success account-button" [routerLink] = "['register']">
+		<label class="btn  btn-success account-button" [routerLink] = "['register']" routerLinkActive="active">
     		<input type="radio" name="options" id="option2" autocomplete="off" routerLink="/register"> Register
   		</label>
 	</div>
