--- a/front-end/src/app/modules/account/register/register.component.html
+++ b/front-end/src/app/modules/account/register/register.component.html
@@ -30,8 +30,8 @@
           required email />
     <div>
       <div class="text-danger" *ngIf="f.submitted && email.invalid">
-        <div *ngIf="email.errors.required"> Email can not be empty !</div>
-        <div *ngIf="email.errors.email"> Email is not valid !</div>
+        <div *ngIf="email.errors.required"> Email can not be empty </div>
+        <div *ngIf="email.errors.email"> Email is not valid </div>
     </div>
   </div>
 
@@ -45,11 +45,12 @@
          [(ngModel)]="model.password"
          #password="ngModel"
          [ngClass]="{ 'is-invalid': f.submitted && password.invalid}"
-         required minlength="8"/>
+         required minlength="8" pattern="(?=.*?[0-9])(?=.*?[A-Z]).+" />
     <div class="text-danger" *ngIf="f.submitted && password.invalid">
       <div *ngIf="password.errors.required" >Password can not be empty </div>
-      <div *ngIf="password.errors.minlength">Minimum length requried is 8 </div>
-      <div *ngIf="password.errors.invalid" >Password is not valid </div>
+      <div *ngIf="password.errors.minlength">Minimum 8 characters </div>
+      <div *ngIf="password.errors.pattern">Minimum one digit and one upper case character required</div>
+      <div *ngIf="password.errors.invalid">Password is not valid </div>
     </div>
   </div>
 
@@ -57,8 +58,14 @@
     <input type="checkbox"
            class="form-check-input"
            id="exampleCheck1"
-    >
-    <label class="form-check-label" for="RegulationsCheck">I accept the shop regulations </label>
+           [(ngModel)] ="checkBoxValue"
+           name="regulationsCheck"
+           #regulationsCheck="ngModel"
+           [ngClass]="{'is-invalid': f.submitted && regulationsCheck.invalid }"
+           required="true">
+    <label class="form-check-label" for="RegulationsCheck" [ngClass]="{'font-weight-bolder': f.submitted && regulationsCheck.invalid }" >I accept the shop regulations </label>
+    <div class="small text-danger" *ngIf="f.submitted && !checkBoxValue">*required</div>
+
   </div>
   <button type="submit" class="btn btn-primary submit-button">Submit</button>
 </form>
