--- a/front-end/src/app/core/navigation/navigation.component.html
+++ b/front-end/src/app/core/navigation/navigation.component.html
@@ -13,14 +13,14 @@
 	  </div>
 	<div class = "account-options">
 		<ul class="navbar-nav">
-			<li class="nav-item">
+			<li class="nav-item" *ngIf="authenticationGuard.canActivateLogin('account')">
 				<a class="nav-item nav-link" routerLink="/account/login">Login</a>
 			</li>
-			<li class="nav-item" >
+			<li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()" >
 				<a class="nav-item nav-link" routerLink="/profile">Profile</a>
 			</li>
-			<li class="nav-item" >
-				<a class="nav-item nav-link" routerLink="/logout">Logout</a>
+			<li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()" >
+				<a class="nav-item nav-link" href="" (click)="authenticationService.logout()">Logout</a>
 			</li>
 		</ul>
 	</div>
