--- a/front-end/src/app/modules/account/login/login.component.html
+++ b/front-end/src/app/modules/account/login/login.component.html
@@ -1,4 +1,5 @@
 <form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && validateUser()">
+  <p class='text-danger login-message'>{{strMessage2.value}}</p>
 
   <div class="form-group">
     <label for="loginInput">Login</label>
