--- a/src/app/modules/profile/change-password/change-password.component.html
+++ b/src/app/modules/profile/change-password/change-password.component.html
@@ -1,47 +1,45 @@
 <form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && updatePassword()">
 
   <div class="form-group">
-    <label for="passwordInput">Current Password</label>
+    <label for="passwordOld">Current Password</label>
     <input type="password" 
            class="form-control"
-           id="passwordInput"
+           id="passwordOld"
+           name="passwordOld"
            [(ngModel)]="model.currentPassword"
-           name="password"
            #password="ngModel"
            required>
 	<div class="text-danger" *ngIf="f.submitted && password.invalid"> Password can not be empty</div>
   </div>
   
 	<div class="form-group">
-    <label for="passwordInput">New password</label>
+    <label for="newPassword">New password</label>
     <input type="password" 
            class="form-control"
-           id="passwordInput"
-           [(ngModel)]="model.newPassword"
+           id="newPassword"
            name="newPassword"
-           #newPassword="ngModel"
+           [(ngModel)]="model.newPassword"
+           #newPass="ngModel"
 		   required minlength="8" pattern="(?=.*?[0-9])(?=.*?[A-Z]).+">
-		<div class="text-danger" *ngIf="f.submitted && newPassword.invalid">
-			<div *ngIf="newPassword.errors.required" >Password can not be empty </div>
-			<div *ngIf="newPassword.errors.minlength">Minimum 8 characters </div>
-			<div *ngIf="newPassword.errors.pattern">Minimum one digit and one upper case character required</div>
-			<div *ngIf="newPassword.errors.invalid">Password is not valid </div>
+		<div class="text-danger" *ngIf="f.submitted && newPass.invalid">
+			<div *ngIf="newPass.errors.required" >Password can not be empty </div>
+			<div *ngIf="newPass.errors.minlength">Minimum 8 characters </div>
+			<div *ngIf="newPass.errors.pattern">Minimum one digit and one upper case character required</div>
+			<div *ngIf="newPass.errors.invalid">Password is not valid </div>
     </div>
     </div>
 
 	  <div class="form-group">
-    <label for="passwordInput">Confirm the new password</label>
+    <label for="newPassConfirm">Confirm the new password</label>
     <input type="password" 
            class="form-control"
-           id="passwordInput"
+           id="newPassConfirm"
+           name="newPassConfirm"
            [(ngModel)]="model.newPasswordConfirmation"
-           name="confirmNewPassword"
-           #confirmNewPassword="ngModel"
-           required appMatchString="model.newPassword">
-    <div class="text-danger" *ngIf="f.submitted && confirmNewPassword.invalid">
-		<div *ngIf="confirmNewPassword.errors.appMatchString">Must match the new password</div>
-		<div *ngIf="confirmNewPassword.errors.required" >Password can not be empty </div>
-		<div *ngIf="confirmNewPassword.errors.invalid">Password is not valid </div>
+           #confirmNewPass="ngModel"
+           required appMatchString="{{model.newPassword}}">
+    <div class="text-danger" *ngIf="f.submitted && confirmNewPass.invalid">
+      Must match the new password
    </div>
   </div>
 
