--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -6,9 +6,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
 	  <div>
 		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-item nav-link" routerLink="">Home</a>
-			</li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Browse Products
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/products/bouquet">Bouquets</a>
+          <a class="dropdown-item" routerLink="/products/flower">Flowers</a>
+        </div>
+      </li>
 		</ul>
 	  </div>
 	<div class = "account-options">
