--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -11,8 +11,10 @@
           Browse Products
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/products/bouquet">Bouquets</a>
           <a class="dropdown-item" routerLink="/products/flower">Flowers</a>
+          <a class="dropdown-item" routerLink="/products/occasional-article">Occasional Articles</a>
+          <a class="dropdown-item" routerLink="/products/souvenir">Souvenirs</a>
+          <a class="dropdown-item" routerLink="/products/bouquet">Bouquets</a>
         </div>
       </li>
 		</ul>
