--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -21,6 +21,9 @@
 	  </div>
 	<div class = "account-options">
 		<ul class="navbar-nav">
+      <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
+        <a class="nav-item nav-link" routerLink="/shopping-cart">Shopping Cart</a>
+      </li>
 			<li class="nav-item" *ngIf="authenticationGuard.canActivateLogin('account')">
 				<a class="nav-item nav-link" routerLink="/account/login">Login</a>
 			</li>
