--- a/src/app/modules/shopping-cart/shopping-cart.component.html
+++ b/src/app/modules/shopping-cart/shopping-cart.component.html
@@ -6,7 +6,7 @@
   <h4>{{ message }}</h4>
 </div>
 
-<div class="card" *ngIf="shoppingCart.flowerOrderList.length > 0 ">
+<div class="card" *ngIf="shoppingCart.flowerOrderDTOs.length > 0 ">
   <div class="card-header" id="headingOne">
     <button
       class="btn btn-success"
@@ -35,16 +35,16 @@
                     <th></th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
+                <tbody >
+                  <tr *ngFor="let flowerOrder of shoppingCart.flowerOrderDTOs">
                     <td>
                       <img src="https://dummyimage.com/50x50/55595c/fff" />
                     </td>
-                    <td>Product Name Toto</td>
+                    <td>{{flowerOrder.flowerDTO.name}}</td>
                     <td>
-                      <input class="form-control" type="text" value="1" />
+                      {{flowerOrder.itemCount}}
                     </td>
-                    <td class="text-right">33,90 €</td>
+                    <td class="text-right">{{flowerOrder.flowerDTO.price.amount | number:'1.2-2'}} {{flowerOrder.flowerDTO.price.currency}}</td>
                     <td class="text-right">
                       <button class="btn btn-sm btn-danger">
                         <i class="fa fa-trash"></i>
@@ -61,20 +61,20 @@
   </div>
 </div>
 
-<div class="card" *ngIf="shoppingCart.occasionalArticleOrderList.length > 0">
+<div class="card" *ngIf="shoppingCart.occasionalArticleOrderDTOs.length > 0">
     <div class="card-header" id="headingOne">
       <button
         class="btn btn-success"
         type="button"
         data-toggle="collapse"
-        data-target="#collapseFlower"
+        data-target="#collapseOccasionalArticle"
         aria-expanded="true"
-        aria-controls="collapseFlower"
+        aria-controls="collapseOccasionalArticle"
       >
         Occasional Articles
       </button>
     </div>
-    <div class="collapse show multi-collapse" id="collapseFlower">
+    <div class="collapse show multi-collapse" id="collapseOccasionalArticle">
       <div class="card-body">
         <div class="container mb-4">
           <div class="row">
@@ -91,15 +91,15 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let occasionalArticle of shoppingCart.occasionalArticleOrderList">
+                    <tr *ngFor="let occasionalArticle of shoppingCart.occasionalArticleOrderDTOs">
                       <td>
                         <img src="https://dummyimage.com/50x50/55595c/fff" />
                       </td>
-                      <td>{{occasionalArticle.occasionalArticle.name}}</td>
+                      <td>{{occasionalArticle.occasionalArticleDTO.name}}</td>
                       <td>
-                        <input class="form-control" type="text" value="{{occasionalArticle.itemCount}}" />
+                       {{occasionalArticle.itemCount}}
                       </td>
-                      <td class="text-right">{{occasionalArticle.occasionalArticle.price.amount}} {{occasionalArticle.occasionalArticle.price.currency}}</td>
+                      <td class="text-right">{{occasionalArticle.occasionalArticleDTO.price.amount | number:'1.2-2'}} {{occasionalArticle.occasionalArticleDTO.price.currency}}</td>
                       <td class="text-right">
                         <button class="btn btn-sm btn-danger">
                           <i class="fa fa-trash"></i>
@@ -116,20 +116,20 @@
     </div>
   </div>
 
-  <div class="card">
+  <div class="card" *ngIf="shoppingCart.souvenirOrderDTOs.length > 0">
     <div class="card-header" id="headingOne">
       <button
         class="btn btn-success"
         type="button"
         data-toggle="collapse"
-        data-target="#collapseFlower"
+        data-target="#collapseSouvenir"
         aria-expanded="true"
-        aria-controls="collapseFlower"
+        aria-controls="collapseSouvenir"
       >
         Souvenirs
       </button>
     </div>
-    <div class="collapse show multi-collapse" id="collapseFlower">
+    <div class="collapse show multi-collapse" id="collapseSouvenir">
       <div class="card-body">
         <div class="container mb-4">
           <div class="row">
@@ -146,15 +146,15 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr *ngFor="let souvenirOrder of shoppingCart.souvenirOrderDTOs">
                       <td>
                         <img src="https://dummyimage.com/50x50/55595c/fff" />
                       </td>
-                      <td>Product Name Toto</td>
+                      <td>{{souvenirOrder.souvenirDTO.name}}</td>
                       <td>
-                        <input class="form-control" type="text" value="1" />
+                        {{souvenirOrder.itemCount}}
                       </td>
-                      <td class="text-right">33,90 €</td>
+                      <td class="text-right">{{souvenirOrder.souvenirDTO.price.amount | number: '1.2-2'}} {{souvenirOrder.souvenirDTO.price.currency}}</td>
                       <td class="text-right">
                         <button class="btn btn-sm btn-danger">
                           <i class="fa fa-trash"></i>
@@ -171,60 +171,6 @@
     </div>
   </div>
 
-  <div class="card" >
-    <div class="card-header" id="headingOne">
-      <button
-        class="btn btn-success"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseFlower"
-        aria-expanded="true"
-        aria-controls="collapseFlower"
-      >
-        Bouquets
-      </button>
-    </div>
-    <div class="collapse show multi-collapse" id="collapseFlower">
-      <div class="card-body">
-        <div class="container mb-4">
-          <div class="row">
-            <div class="col-12">
-              <div class="table-responsive">
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th scope="col"></th>
-                      <th scope="col">Product</th>
-                      <th scope="col">Quantity</th>
-                      <th scope="col" class="text-right">Price</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>
-                        <img src="https://dummyimage.com/50x50/55595c/fff" />
-                      </td>
-                      <td>Product Name Toto</td>
-                      <td>
-                        <input class="form-control" type="text" value="1" />
-                      </td>
-                      <td class="text-right">33,90 €</td>
-                      <td class="text-right">
-                        <button class="btn btn-sm btn-danger">
-                          <i class="fa fa-trash"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <div class="container mb-4">
   <div class="row">
@@ -248,7 +194,7 @@
               <td></td>
               <td></td>
               <td class="text-right">Shipping</td>
-              <td class="text-right">6,90 €</td>
+              <td class="text-right">{{shipping.amount | number:'1.2-2'}} {{shipping.currency}}</td>
             </tr>
             <tr>
               <td></td>
@@ -256,7 +202,7 @@
               <td></td>
               <td></td>
               <td class="text-right"><strong>Total</strong></td>
-              <td class="text-right"><strong>346,90 €</strong></td>
+              <td class="text-right"><strong>{{totalPrice.amount | number:'1.2-2'}} {{totalPrice.currency}}</strong></td>
             </tr>
           </tbody>
         </table>
