Add Adding products to shopping cart

--- a/src/app/modules/products/bouquet/bouquet.component.html
+++ b/src/app/modules/products/bouquet/bouquet.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  Coming soon.
   <div class="row products-row" *ngFor="let row of viewModel;">
 
       <div class="card products-column" style="width: 18rem;" *ngFor="let product of row;" >
