--- a/src/app/modules/products/occasional-article/occasional-article.component.html
+++ b/src/app/modules/products/occasional-article/occasional-article.component.html
@@ -37,7 +37,7 @@
       <div class="card-body">
         <p class="price">
           {{ product.price.amount }} {{ product.price.currency }}
-          <button type="button" class="btn btn-success float-right">
+          <button type="button" class="btn btn-success float-right" *ngIf="authenticationGuard.isAuthenticated()" (click)="addToShoppingCart(product.id)">
             Add to cart
           </button>
         </p>
