Miscelanous changes, update TODO list

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,5 +5,9 @@
 
 .content
   position: relative
-  min-height: 200px
+  height: auto
+  min-height: 100%
   width: 100%
+
+.footer
+  margin-top: 50px
