--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,11 +1,17 @@
-<html>
+<div class="text-center text-justify">
+  <b>Work in progress</b>
+</div>
+<br>
+<div>
+  <p>Currently planned features:</p>
+  <ul>
+    <li>Product image storing in database</li>
+    <li>Customizable bouquets with pre existing templates offered by shop</li>
+    <li>Order Placing</li>
+    <li>Order Delivery with delivery fee calculation (maybe using some sort of map, or existing api)</li>
+    <li>Admin page - modyfing user privileges, etc.</li>
+    <li>Employee page - looking into currently existing orders, updating their status</li>
+  </ul>
+</div>
 
-<head>
-	<title>title</title>
-</head>
 
-<body>
-	It works!
-</body>
-
-</html>
