--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,3 +2,8 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css)
 @import url(../node_modules/font-awesome/css/font-awesome.css)
 
+body
+  magin: 0
+  padding: 0
+  height:100%
+
