--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,7 @@
 <div class = "container content">
   <router-outlet></router-outlet>
 </div>
+
+<div class = "footer">
+  <app-footer></app-footer>
+</div>
