fix footer location issue

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -11,6 +11,7 @@
     <li>Order Delivery with delivery fee calculation (maybe using some sort of map, or existing api)</li>
     <li>Admin page - modyfing user privileges, etc.</li>
     <li>Employee page - looking into currently existing orders, updating their status</li>
+    <li>Add anti-botting and scripting preventing measures - Thanks to you Mateusz :)</li>
   </ul>
 </div>
 
