--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,6 +2,9 @@
 @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css)
 @import url(../node_modules/font-awesome/css/font-awesome.css)
 
+html
+  height: 100%
+
 body
   magin: 0
   padding: 0
