Add Order component and its children -> Delivery Address, Payment

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,3 +1,8 @@
+
+<div class="text-center text-justify">
+  <h2> First invokation of this application requests can take some times as Heroku have to wake up backend and database containers</h2>
+</div>
+<br>
 <div class="text-center text-justify">
   <b>Work in progress</b>
 </div>
