--- a/src/app/modules/order/delivery-address/delivery-address.component.sass
+++ b/src/app/modules/order/delivery-address/delivery-address.component.sass
@@ -11,4 +11,15 @@
   margin-top: 3%
 
 .continue-button
-  float: right
+  margin-top: 1%
+
+.house-number
+  max-width: 200px
+
+.zip-code
+  max-width: 150px
+
+.apartment-number
+  max-width: 150px
+
+
