Refactor total price counting in shopping cart

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -16,6 +16,8 @@
     <li>Order Delivery with delivery fee calculation (maybe using some sort of map, or existing api)</li>
     <li>Admin page - modyfing user privileges, etc.</li>
     <li>Employee page - looking into currently existing orders, updating their status</li>
+    <li>Zip code and House Number validator in Delivery Address section</li>
+    <li>Check for existing orders without assigned all properties (delivery address, payment etc) before placing another order and allow for their removal</li>
   </ul>
 </div>
 
