Minor fixes, move delivery cost retrieving to service, add Details and Summary components

--- a/src/app/modules/order/delivery-address/delivery-address.component.html
+++ b/src/app/modules/order/delivery-address/delivery-address.component.html
@@ -52,7 +52,7 @@
       <div class="form-row">
         <div class="apartment-number col">
           <label for="input-apartment">Apartment</label>
-          <input type="text" class="form-control" id="input-apartment" [(ngModel)]="deliveryAddressDTO.apartmentNumber" #apartment="ngModel" maxlength="7">
+          <input type="text" class="form-control" id="input-apartment" [(ngModel)]="deliveryAddressDTO.apartmentNumber" name="apartment" #apartment="ngModel" maxlength="7">
           <small class="form-text text-muted">(Optional)</small>
         </div>
         <div class="zip-code col">
