--- a/src/app/modules/order/details/details.component.sass
+++ b/src/app/modules/order/details/details.component.sass
@@ -1,5 +1,25 @@
+.border
+  margin-top: 5%
+
+.delivery-address
+  padding: 1.5%
+
+.component-title
+  margin-top: 1%
+
+.payment-form
+  margin-top: 3%
+
 #input-delivery-date
   min-width: 110px
 
 .date-picker
   min-width: 210px
+  padding-top: 1%
+
+.time-picker-div
+  padding-top: 1%
+  padding-left: 1%
+
+.additional-info-div
+  padding-top: 3%
