Move continue button to right on every order page, add forgotten pipes to price displays

--- a/src/app/modules/order/delivery-address/delivery-address.component.html
+++ b/src/app/modules/order/delivery-address/delivery-address.component.html
@@ -72,8 +72,10 @@
           </div>
         </div>
       </div>
-      <div class="continue-button">
-        <button type="submit" class="continue-button btn btn-success">Continue</button>
+      <div class="row">
+        <div class="continue-button col">
+          <button type="submit" class="continue-button btn btn-success">Continue</button>
+        </div>
       </div>
     </form>
   </div>
