--- a/src/app/modules/order/payment/payment.component.html
+++ b/src/app/modules/order/payment/payment.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <ngb-progressbar animated="true" striped="true" type="success" max="100" value="50" ></ngb-progressbar>
+  <ngb-progressbar animated="true" striped="true" type="success" max="100" value="75" ></ngb-progressbar>
 </div>
 <div class="border border-success rounded-lg ">
   <div class="payment">
@@ -17,7 +17,7 @@
           </select>
         </div>
         <div class="total-price col-6">
-          <h4><b>Total Price: {{paymentDTO.totalPrice.amount}} {{paymentDTO.totalPrice.currency}}</b></h4>
+          <h4><b>Total Price: {{paymentDTO.totalPrice.amount | number:'1.2-2'}} {{paymentDTO.totalPrice.currency}}</b></h4>
         </div>
       </div>
       <div class="row">
